feat: allow saving multiple reports (#119)
